[package]
name = "raytx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
solana-client = "=1.16.27"
solana-sdk = "=1.16.27"
solana-program = "=1.16.27"
dotenv = "0.15"
common = { git = "https://github.com/raydium-io/raydium-library" }
amm-cli = { git = "https://github.com/raydium-io/raydium-library" }
raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
    "client",
] }

spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token-client = "=0.7.1"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client" }
rand = "0.8.5"
indicatif = "0.17"
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
borsh = "1.5.3"
borsh-derive = "1.5.3"
bincode = "1.3.3"
futures = "0.3"
async-trait = "0.1"

# Added dependencies for the gRPC client with fixed versions
tonic = { version = "0.9", features = ["tls"] }
async-stream = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
# Use specific versions of yellowstone that are compatible with Solana 1.16.x
yellowstone-grpc-client = "=1.9.0+solana.1.16.x"
yellowstone-grpc-proto = "=1.9.0+solana.1.16.x"
bytemuck = "1.5.3"
[dev-dependencies]
ctor = "0.2.8"


[features]
slow_tests = []
